# gao

./: .gitignore  README.md  protests.csv  protests.db  protests_2023.db  pyproject.toml  requirements.txt  run.py  setup.py
lib/: gao.py  listing.py  opinion.py  protest.py
tests/: test-multiple-request.yml  test.html  test_gao.py  test_get_opinion.py  test_protest.py
tests/cassettes/test_gao/: TestGAO.test_get_all_dockets.yaml  TestGAO.test_get_dockets_page_list.yaml
tests/cassettes/test_opinion/: opinion.yml  test_opinion.html
tests/data/: failing-opinion.yml  failing-protest-opinion.yml  test-initial-request.yml  test-multiple-request.yml  test.html  test.json  working-opinion.yml
