[tool.poetry]
name = "gao"
version = "0.2.0"
description = ""
authors = ["V. David Zvenyach <dave@zvenyach.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^4.9.3"
cssselect = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
vcrpy = "^5.1.0"
pytest-recording = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
